--- a/index.html
+++ b/index.html
@@ -50,7 +50,22 @@
                 </nav>
             </div>
         </div>
-    </header>   
+    </header>
+    <main>
+        <div class="main-body-dark">
+            <div class="photo-cont-dark">
+                <div class="photo-avatar-dark">
+                    <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
+                </div>
+                <div class="text-card-dark">               
+                    <h2>Oleksandr</h2>
+                    <h2>Onishchenko</h2>
+                    <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
+                    <p>Trainee in IT-Consulting </p>
+                </div>
+            </div>
+        </div>   
+    </main>
 </body>
 
 </html>
