--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                         <div class="language-sel-dark">
                             <li><a href="index.html">EN</a></li>
                             <p>|</p>
-                            <li><a href="index-ru.html">RU</a></li>
+                            <li><a href="index-de.html">DE</a></li>
                             <p>|</p>
-                            <li><a class="last-language-bar-margin-right" href="index-de.html">DE</a></li>
+                            <li><a class="last-language-bar-margin-right" href="index-ru.html">RU</a></li>
                         </div>
                         <div class="dropbox-dark">
                             <button class="nav-btn-dark">&#9776</button>
