--- a/index-ru.html
+++ b/index-ru.html
@@ -34,9 +34,9 @@
                         <div class="language-sel-dark">
                             <li><a href="index.html">EN</a></li>
                             <p>|</p>
-                            <li><a href="index-ru.html">RU</a></li>
+                            <li><a href="index-de.html">DE</a></li>
                             <p>|</p>
-                            <li><a class="last-language-bar-margin-right" href="index-de.html">DE</a></li>
+                            <li><a class="last-language-bar-margin-right" href="index-ru.html">RU</a></li>
                         </div>
                         <div class="dropbox-dark">
                             <button class="nav-btn-dark">&#9776</button>
@@ -51,7 +51,32 @@
             </div>
         </div>
     </header>
-       
+    <main>
+        <div class="main-body-dark">
+            <div class="photo-cont-dark">
+                <div class="photo-avatar-dark">
+                    <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
+                </div>
+                <div class="text-card-dark">               
+                    <h2>Александр</h2>
+                    <h2>Онищенко</h2>
+                    <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
+                    <p>Студент в сфере IT-консалтинга</p>
+                </div>
+            </div>
+            <div class="text-cont-dark">
+                <h1 class="ru-version">Здравствуйте!</h1>
+                <h3 class="ru-information">Краткая информация обо мне</h3>
+                <div class="buttons-dark">
+                    <div class="cv-show-button-dark">
+                        <a href="#">Резюме</a>
+                    </div>
+                    <div class="contact-button-dark">
+                        <a href="#">Контакт</a>
+                    </div>
+                </div>
+        </div>   
+    </main>
 </body>
 
 </html>
