--- a/index.html
+++ b/index.html
@@ -64,6 +64,19 @@
                     <p>Trainee in IT-Consulting </p>
                 </div>
             </div>
+            <div class="text-cont-dark">
+                <h1>Hello!</h1>
+                <h3>Here is a little bit about me</h3>
+                <div class="buttons-dark">
+                    <div class="cv-show-button-dark">
+                        <a href="#">Show CV</a>
+                    </div>
+                    <div class="contact-button-dark">
+                        <a href="#">Contact me</a>
+                    </div>
+                </div>
+                
+            </div>
         </div>   
     </main>
 </body>
