--- a/index-ru.html
+++ b/index-ru.html
@@ -65,8 +65,8 @@
                 </div>
             </div>
             <div class="text-cont-dark">
-                <h1 class="ru-version">Здравствуйте!</h1>
-                <h3 class="ru-information">Краткая информация обо мне</h3>
+                <h1 id="ru-version">Здравствуйте!</h1>
+                <h3 id="ru-information">Краткая информация обо мне</h3>
                 <div class="buttons-dark">
                     <div class="cv-show-button-dark">
                         <a href="#">Резюме</a>
