--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                     <div class="contact-button-dark">
                         <a href="#">Contact me</a>
                     </div>
+                    <div class="about-me-dark">
+                        <p>I am 18 years old and I live in the metropolitan area of Hamburg, Germany. I am doing an apprenticeship a specialist in system integration. In my free time, I enjoy programming and web development, honing my skills and applying them in practice. However, I also value time away from the screen, spending it on travel and active pursuits. I am confident that the IT field is ideal for my self-realization, as it represents our future</p>
+                    </div>
                 </div>
                 
             </div>
