--- a/index-de.html
+++ b/index-de.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li><a href="index.html">Oleksandr Onishchenko</a></li>
                     </ul>
-                </nav> 
+                </nav>
                 <nav>
                     <ul>
                         <div class="language-sel-dark">
@@ -40,8 +40,9 @@
                         <div class="dropbox-dark">
                             <button class="nav-btn-dark">&#9776</button>
                             <div class="dropbox-links-dark">
-                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko" target="_blank">LinkedIn</a></li>
-                                <li><a href="https://github.com/alxww55"target="_blank">GitHub|Portfolio</a></li>
+                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko"
+                                        target="_blank">LinkedIn</a></li>
+                                <li><a href="https://github.com/alxww55" target="_blank">GitHub|Portfolio</a></li>
                                 <li><a href="#">Kontakt</a></li>
                             </div>
                         </div>
@@ -56,7 +57,7 @@
                 <div class="photo-avatar-dark">
                     <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
                 </div>
-                <div class="text-card-dark">               
+                <div class="text-card-dark">
                     <h2>Oleksandr</h2>
                     <h2>Onishchenko</h2>
                     <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
@@ -74,7 +75,15 @@
                         <a href="#">Kontaktieren</a>
                     </div>
                 </div>
-        </div>   
+                <div class="about-me-dark">
+                    <p> Ich bin 18 Jahre alt und wohne im Großraum Hamburg. Ich absolviere eine Ausbildung als
+                        Fachinformatiker für Systemintegration. Meine Freizeit gestalte ich mit dem Lernen der
+                        Programmiersprachen und der Webentwicklung. Aber ich bin auch mal gerne weg vom Bildschirm - ich
+                        mag reisen und verschiedene Aktivitäten. Ich bin mir sicher, dass die IT-Branche perfekt für
+                        meine Karriereentwicklung passt, da es ein Zukunftsbereich ist
+                    </p>
+                </div>
+            </div>
     </main>
 </body>
 
