--- a/index-ru.html
+++ b/index-ru.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="index.html">Александр Онищенко</a></li>
                     </ul>
-                </nav> 
+                </nav>
                 <nav>
                     <ul>
                         <div class="language-sel-dark">
@@ -41,8 +41,9 @@
                         <div class="dropbox-dark">
                             <button class="nav-btn-dark">&#9776</button>
                             <div class="dropbox-links-dark">
-                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko" target="_blank">LinkedIn</a></li>
-                                <li><a href="https://github.com/alxww55"target="_blank">GitHub|Портфолио</a></li>
+                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko"
+                                        target="_blank">LinkedIn</a></li>
+                                <li><a href="https://github.com/alxww55" target="_blank">GitHub|Портфолио</a></li>
                                 <li><a href="#">Контакт</a></li>
                             </div>
                         </div>
@@ -57,7 +58,7 @@
                 <div class="photo-avatar-dark">
                     <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
                 </div>
-                <div class="text-card-dark">               
+                <div class="text-card-dark">
                     <h2>Александр</h2>
                     <h2>Онищенко</h2>
                     <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
@@ -75,7 +76,14 @@
                         <a href="#">Контакт</a>
                     </div>
                 </div>
-        </div>   
+                <div class="about-me-dark">
+                    <p> Мне 18 лет, и я живу в метропольном регионе г. Гамбург. Я прохожу обучение на IT-специалиста по системной
+                        интеграции. В свободное время я изучаю языки программированием и веб-разработку. Но мне также
+                        нравится проводить время вдали от экрана — я люблю путешествовать и активно проводить время. Я уверен, что IT-отрасль идеально подходит для моей карьеры, так как за
+                        ней будущее.
+                    </p>
+                </div>
+            </div>
     </main>
 </body>
 
