--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <ul>
                         <li><a href="index.html">Oleksandr Onishchenko</a></li>
                     </ul>
-                </nav> 
+                </nav>
                 <nav>
                     <ul>
                         <div class="language-sel-dark">
@@ -41,8 +41,9 @@
                         <div class="dropbox-dark">
                             <button class="nav-btn-dark">&#9776</button>
                             <div class="dropbox-links-dark">
-                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko" target="_blank">LinkedIn</a></li>
-                                <li><a href="https://github.com/alxww55"target="_blank">GitHub|Portfolio</a></li>
+                                <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko"
+                                        target="_blank">LinkedIn</a></li>
+                                <li><a href="https://github.com/alxww55" target="_blank">GitHub|Portfolio</a></li>
                                 <li><a href="#">Contact</a></li>
                             </div>
                         </div>
@@ -52,35 +53,41 @@
         </div>
     </header>
     <main>
-        <div class="main-body-dark">
-            <div class="photo-cont-dark">
-                <div class="photo-avatar-dark">
-                    <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
-                </div>
-                <div class="text-card-dark">               
-                    <h2>Oleksandr</h2>
-                    <h2>Onishchenko</h2>
-                    <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
-                    <p>Trainee in IT-Consulting </p>
-                </div>
-            </div>
-            <div class="text-cont-dark">
-                <h1>Hello!</h1>
-                <h3>Here is a little bit about me</h3>
-                <div class="buttons-dark">
-                    <div class="cv-show-button-dark">
-                        <a href="#">Show CV</a>
+        <div class="main-container">
+            <div class="main-body-dark">
+                <div class="photo-cont-dark">
+                    <div class="photo-avatar-dark">
+                        <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
                     </div>
-                    <div class="contact-button-dark">
-                        <a href="#">Contact me</a>
+                    <div class="text-card-dark">
+                        <h2>Oleksandr</h2>
+                        <h2>Onishchenko</h2>
+                        <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
+                        <p>Trainee in IT-Consulting </p>
+                    </div>
+                </div>
+                <div class="text-cont-dark">
+                    <h1>Hello!</h1>
+                    <h3>Here is a little bit about me</h3>
+                    <div class="buttons-dark">
+                        <div class="cv-show-button-dark">
+                            <a href="#">Show CV</a>
+                        </div>
+                        <div class="contact-button-dark">
+                            <a href="#">Contact me</a>
+                        </div>
                     </div>
                     <div class="about-me-dark">
-                        <p>I am 18 years old and I live in the metropolitan area of Hamburg, Germany. I am doing an apprenticeship a specialist in system integration. In my free time, I enjoy programming and web development, honing my skills and applying them in practice. However, I also value time away from the screen, spending it on travel and active pursuits. I am confident that the IT field is ideal for my self-realization, as it represents our future</p>
+                        <p> I am 18 years old and live in the Hamburg metropolitan area. I am doing an apprenticeship as an
+                            IT specialist in system integration. In my free time, I focus on learning programming languages
+                            and web development. However, I also enjoy spending time away from the screen—I like to travel
+                            and engage in various activities. I am confident that the IT is perfect for my career
+                            development, as it represents the future
+                        </p>
                     </div>
                 </div>
-                
             </div>
-        </div>   
+        </div>
     </main>
 </body>
 
