--- a/index-de.html
+++ b/index-de.html
@@ -5,16 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O.Onishchenko | Home</title>
+    <link rel="shortcut icon" href="static/images/home.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="static/styles/navpanel-dark.css">
     <link rel="stylesheet" href="static/styles/contents-dark.css">
+    <link rel="stylesheet" href="static/styles/footer-dark.css">
     <style>
         body {
-            background-color: rgb(32, 32, 32);
-            background-size: auto;
+            background-image:
+            radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            position: relative;
+            background-size: 100% 200%;
+            background: -ms-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* IE10 */  
+            background: -moz-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* FF 3.6+ */  
+            background: -webkit-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 5.1+, Chrome 10+ */  
+            background: -webkit-gradient(radial, circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 4+, Chrome 2+ */  
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
+            background: -o-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Opera 11.10 */  
+            background: radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* the standard */  
+            -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
+            z-index: 1;
         }
     </style>
 </head>
@@ -52,7 +65,11 @@
         </div>
     </header>
     <main>
-        <div class="main-body-dark">
+        <div class="main-container">
+            <div class="introducing-header-dark">
+                <h1>Ich stelle<br>mich<br>kurz vor</h1>
+            </div>   
+            <div class="main-body-dark">
             <div class="photo-cont-dark">
                 <div class="photo-avatar-dark">
                     <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
@@ -84,7 +101,72 @@
                     </p>
                 </div>
             </div>
+            </div>
+            <div class="skills-dark">
+            <h2>Was ich mache?</h2>
+            </div>
+            <div class="skills-container-dark">
+            <p>Zurzeit lerne ich: </p>
+            <div class="logos-container-dark">
+                <img src="static/images/js.png" alt="JavaScript">
+                <img src="static/images/java.png" alt="Java logo">
+                <img src="static/images/ms365.jpg" alt="MS 365">
+                <img src="static/images/veeam.png" alt="Veeam">
+            </div>
+                <p>Mein Stack: </p>
+            <div class="logos-container-dark">
+                    <img src="static/images/html5.png" alt="HTML5 Logo">
+                    <img src="static/images/css3.png" alt="CSS3 Logo">
+            </div>
+            </div>
+            <div class="coming-soon-dark">
+            <h2>Kommt bald...</h2>
+            </div>
+            <div class="coming-soon-container">
+            <p>Ich arbeite ständig an meinen Projekten und hochlade die bei GitHub</p>
+            <p>Mehr dazu</p>
+            <div class="follow-me-btn">
+                <div class="follow-me-dark">
+                    <a href="https://github.com/alxww55" target="_blank">Folgen!</a>
+                </div>
+            </div>
+            </div>
+        </div> 
     </main>
+    <footer>
+        <div class="footer-dark">
+            <div class="footer-left-side">
+                <div class="name-footer-dark">
+                    <p>Oleksandr Onishchenko</p>
+                </div>
+                <div class="text-left-footer">
+                    <p>Kontaktieren:</p>
+                    <div class="contact-icons-footer">
+                        <a href="https://www.linkedin.com/in/oleksandr-onishchenko"><img
+                                src="static/images/linkedin.png" alt="LinkedIn Icon"></a></li>
+                        <a href="https://github.com/alxww55"><img src="static/images/github.png" alt="GitHub Icon"></a>
+                    </div>
+                    <p class="copyright">© 2024 Oleksandr Onishchenko</p>
+                </div>
+            </div>
+            <div class="footer-right-side">
+                <div class="info-footer-right">
+                    <p>Navigation</p>
+                    <ul>
+                        <li><a href="index.html">EN Version</a></li>
+                        <li><a href="index-ru.html">RU Version</a></li>
+                        <li><a href="#">Lebenslauf</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="cookies-info">
+                <p>Datenschutz</p>
+                <ul>
+                    <li><a href="#">Mehr erfahren</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
