--- a/index-ru.html
+++ b/index-ru.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>А. Онищенко | Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="static/images/home.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,10 +12,22 @@
         rel="stylesheet">
     <link rel="stylesheet" href="static/styles/navpanel-dark.css">
     <link rel="stylesheet" href="static/styles/contents-dark.css">
+    <link rel="stylesheet" href="static/styles/footer-dark.css">
     <style>
         body {
-            background-color: rgb(32, 32, 32);
-            background-size: auto;
+            background-image:
+            radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            position: relative;
+            background-size: 100% 200%;
+            background: -ms-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* IE10 */  
+            background: -moz-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* FF 3.6+ */  
+            background: -webkit-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 5.1+, Chrome 10+ */  
+            background: -webkit-gradient(radial, circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 4+, Chrome 2+ */  
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
+            background: -o-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Opera 11.10 */  
+            background: radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* the standard */  
+            -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
+            z-index: 1;
         }
     </style>
 </head>
@@ -56,8 +65,12 @@
         </div>
     </header>
     <main>
-        <div class="main-body-dark">
-            <div class="photo-cont-dark">
+        <div class="main-container">
+            <div class="introducing-header-dark">
+                <h1 id="ru-h1">Позвольте<br>мне<br>представиться</h1>
+            </div> 
+            <div class="main-body-dark">
+                <div class="photo-cont-dark">
                 <div class="photo-avatar-dark">
                     <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
                 </div>
@@ -67,8 +80,8 @@
                     <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
                     <p>Студент в сфере IT-консалтинга</p>
                 </div>
-            </div>
-            <div class="text-cont-dark">
+                </div>
+                <div class="text-cont-dark">
                 <h1 id="ru-version">Здравствуйте!</h1>
                 <h3 id="ru-information">Краткая информация обо мне</h3>
                 <div class="buttons-dark">
@@ -87,6 +100,7 @@
                     </p>
                 </div>
             </div>
+        </div>
     </main>
 </body>
 
