--- a/index-ru.html
+++ b/index-ru.html
@@ -100,8 +100,72 @@
                     </p>
                 </div>
             </div>
+            </div>
+            <div class="skills-dark">
+                <h2 id="ru-h1">Чем я занимаюсь?</h2>
+            </div>
+            <div class="skills-container-dark">
+                <p id="ru-information">В данный момент я изучаю: </p>
+                <div class="logos-container-dark">
+                    <img src="static/images/js.png" alt="JavaScript">
+                    <img src="static/images/java.png" alt="Java logo">
+                    <img src="static/images/ms365.jpg" alt="MS 365">
+                    <img src="static/images/veeam.png" alt="Veeam">
+                </div>
+                    <p id="ru-information">Мой стек: </p>
+                <div class="logos-container-dark">
+                        <img src="static/images/html5.png" alt="HTML5 Logo">
+                        <img src="static/images/css3.png" alt="CSS3 Logo">
+                </div>
+            </div>
+            <div class="coming-soon-dark">
+                <h2 id="ru-h1">Оставайтесь в курсе</h2>
+            </div>
+            <div class="coming-soon-container">
+                <p id="ru-information">Я активно работаю над своими проектами и буду загружать их на GitHub</p>
+                <p id="ru-information">Подписывайтесь, чтобы увидеть больше!</p>
+                <div class="follow-me-btn">
+                    <div class="follow-me-dark">
+                        <a href="https://github.com/alxww55" target="_blank">Подписаться</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+    <footer>
+        <div class="footer-dark">
+            <div class="footer-left-side">
+                <div class="name-footer-dark">
+                    <p id="ru-information">Александр Онищенко</p>
+                </div>
+                <div class="text-left-footer">
+                    <p id="ru-information">Контакт:</p>
+                    <div class="contact-icons-footer">
+                        <a href="https://www.linkedin.com/in/oleksandr-onishchenko"><img
+                                src="static/images/linkedin.png" alt="LinkedIn Icon"></a></li>
+                        <a href="https://github.com/alxww55"><img src="static/images/github.png" alt="GitHub Icon"></a>
+                    </div>
+                    <p class="copyright">© 2024 Александр Онищенко</p>
+                </div>
+            </div>
+            <div class="footer-right-side">
+                <div class="info-footer-right">
+                    <p id="ru-information">Навигация</p>
+                    <ul>
+                        <li><a href="index-en.html">EN Версия</a></li>
+                        <li><a href="index-de.html">DE Версия</a></li>
+                        <li><a href="#">Резюме</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="cookies-info">
+                <p id="ru-information">Данные</p>
+                <ul>
+                    <li><a href="">Узнать больше</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
